--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "product-preview-card",
   "version": "0.1.0",
-  "homepage": "https://LRJasmine.github.io/product-preview-card",
+  "homepage": "https://lrjasmine.github.io/product-preview-card/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
